src/test/deca/syntax/invalid/classique/test-Invalid-5.deca
// Description:
//    tests de programme lexicalement Incorrect.
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//    Il faut un point-virgule
//
// Historique:
//    cree le 01/01/2025

{
    NUM x = 1 // Need a semicolon
}